modules/aws_vpc/endpoints_gateways.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = "${aws_vpc.vpc.id}"
  tags   = "${merge(var.tags, tomap({"Name" = format("%s-igw", var.name)}))}"
}
